v2.6/_sources/enum_dnnl_status_t.rst.txt
.. index:: pair: enum; dnnl_status_t
.. _doxid-group__dnnl__api__utils_1gad24f9ded06e34d3ee71e7fc4b408d57a:

enum dnnl_status_t
==================

Overview
~~~~~~~~

Status values returned by the library functions. :ref:`More...<details-group__dnnl__api__utils_1gad24f9ded06e34d3ee71e7fc4b408d57a>`

.. ref-code-block:: cpp
	:class: doxyrest-overview-code-block

	#include <dnnl_types.h>

	enum dnnl_status_t
	{
	    :ref:`dnnl_success<doxid-group__dnnl__api__utils_1ggad24f9ded06e34d3ee71e7fc4b408d57aaa31395e9dccc103cf166cf7b38fc5b9c>`           = 0,
	    :ref:`dnnl_out_of_memory<doxid-group__dnnl__api__utils_1ggad24f9ded06e34d3ee71e7fc4b408d57aa45f782c74a21417c4266939a79b404e0>`     = 1,
	    :ref:`dnnl_invalid_arguments<doxid-group__dnnl__api__utils_1ggad24f9ded06e34d3ee71e7fc4b408d57aaecec97c787d74a33924abcf16ae4f51c>` = 2,
	    :ref:`dnnl_unimplemented<doxid-group__dnnl__api__utils_1ggad24f9ded06e34d3ee71e7fc4b408d57aa3a8579e8afc4e23344cd3115b0e81de1>`     = 3,
	    :ref:`dnnl_iterator_ends<doxid-group__dnnl__api__utils_1ggad24f9ded06e34d3ee71e7fc4b408d57aa13c87caa79bf314853e2d8ae46106f50>`     = 4,
	    :ref:`dnnl_runtime_error<doxid-group__dnnl__api__utils_1ggad24f9ded06e34d3ee71e7fc4b408d57aa38efb4adabcae7c9e6479e8ee1242b9b>`     = 5,
	    :ref:`dnnl_not_required<doxid-group__dnnl__api__utils_1ggad24f9ded06e34d3ee71e7fc4b408d57aaff3988320148106126bce50dd76d6a97>`      = 6,
	};

.. _details-group__dnnl__api__utils_1gad24f9ded06e34d3ee71e7fc4b408d57a:

Detailed Documentation
~~~~~~~~~~~~~~~~~~~~~~

Status values returned by the library functions.

Enum Values
-----------

.. index:: pair: enumvalue; dnnl_success
.. _doxid-group__dnnl__api__utils_1ggad24f9ded06e34d3ee71e7fc4b408d57aaa31395e9dccc103cf166cf7b38fc5b9c:

.. ref-code-block:: cpp
	:class: doxyrest-title-code-block

	dnnl_success

The operation was successful.

.. index:: pair: enumvalue; dnnl_out_of_memory
.. _doxid-group__dnnl__api__utils_1ggad24f9ded06e34d3ee71e7fc4b408d57aa45f782c74a21417c4266939a79b404e0:

.. ref-code-block:: cpp
	:class: doxyrest-title-code-block

	dnnl_out_of_memory

The operation failed due to an out-of-memory condition.

.. index:: pair: enumvalue; dnnl_invalid_arguments
.. _doxid-group__dnnl__api__utils_1ggad24f9ded06e34d3ee71e7fc4b408d57aaecec97c787d74a33924abcf16ae4f51c:

.. ref-code-block:: cpp
	:class: doxyrest-title-code-block

	dnnl_invalid_arguments

The operation failed because of incorrect function arguments.

.. index:: pair: enumvalue; dnnl_unimplemented
.. _doxid-group__dnnl__api__utils_1ggad24f9ded06e34d3ee71e7fc4b408d57aa3a8579e8afc4e23344cd3115b0e81de1:

.. ref-code-block:: cpp
	:class: doxyrest-title-code-block

	dnnl_unimplemented

The operation failed because requested functionality is not implemented.

.. index:: pair: enumvalue; dnnl_iterator_ends
.. _doxid-group__dnnl__api__utils_1ggad24f9ded06e34d3ee71e7fc4b408d57aa13c87caa79bf314853e2d8ae46106f50:

.. ref-code-block:: cpp
	:class: doxyrest-title-code-block

	dnnl_iterator_ends

Primitive iterator passed over last primitive descriptor.

.. index:: pair: enumvalue; dnnl_runtime_error
.. _doxid-group__dnnl__api__utils_1ggad24f9ded06e34d3ee71e7fc4b408d57aa38efb4adabcae7c9e6479e8ee1242b9b:

.. ref-code-block:: cpp
	:class: doxyrest-title-code-block

	dnnl_runtime_error

Primitive or engine failed on execution.

.. index:: pair: enumvalue; dnnl_not_required
.. _doxid-group__dnnl__api__utils_1ggad24f9ded06e34d3ee71e7fc4b408d57aaff3988320148106126bce50dd76d6a97:

.. ref-code-block:: cpp
	:class: doxyrest-title-code-block

	dnnl_not_required

Queried element is not required for given primitive.

